Popraweczka dzialania na starszych wersjach Androida